# rust_workspaces_skeleton

./: Cargo.toml
examples/root_example/: main.rs
src/: lib.rs
workspace_1/: Cargo.toml
workspace_1/src/: lib.rs
workspace_2/: Cargo.toml
workspace_2/src/: lib.rs
workspace_3/: Cargo.toml
workspace_3/src/: lib.rs
